# LearnQt

./: CMakeLists.txt  main.cpp
libs/AnalogClock/: AnalogClockWindow.cpp  AnalogClockWindow.h  RasterWindow.cpp  RasterWindow.h
